mapReduce with FCV 4.2 on 4.4 branch has default nonAtomic value true instead of false

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Query 2020-03-23
    • 49
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This is caused by SERVER-45210. To fix this we will FCV gate that on 4.4, and if the fcv is 4.2 we will revert to the code used before SERVER-45210.

      The bug in the BF is caused because nonAtomic causes the profiler namespace to change.

      This ticket will only change the 4.4 branch.

            Assignee:
            Ted Tuckman (Inactive)
            Reporter:
            Ted Tuckman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: