SERVER-46685 Use old nonAtomic default value with FCV 4.2