src/mongo/db/commands/mr_common.cpp
@@ -62,7 +62,7 @@
 namespace mongo::map_reduce_common {
 
 namespace {
-
+Rarely nonAtomicDeprecationSampler;  // Used to occasionally log deprecation messages.
 using namespace std::string_literals;
 
 Status interpretTranslationError(DBException* ex, const MapReduce& parsedMr) {
@@ -268,7 +268,13 @@ auto translateOut(boost::intrusive_ptr<ExpressionContext> expCtx,
 OutputOptions parseOutputOptions(const std::string& dbname, const BSONObj& cmdObj) {
     OutputOptions outputOptions;
 
-    outputOptions.outNonAtomic = true;
+    // Preserve the defaults for FCV 4.2.
+    if (serverGlobalParams.featureCompatibility.getVersion() ==
+        ServerGlobalParams::FeatureCompatibility::Version::kFullyUpgradedTo44) {
+        outputOptions.outNonAtomic = true;
+    } else {
+        outputOptions.outNonAtomic = false;
+    }
     if (cmdObj["out"].type() == String) {
         outputOptions.collectionName = cmdObj["out"].String();
         outputOptions.outType = OutputType::Replace;
@@ -306,12 +312,25 @@ OutputOptions parseOutputOptions(const std::string& dbname, const BSONObj& cmdOb
                           .isOnInternalDb()));
         }
         if (o.hasElement("nonAtomic")) {
-            uassert(
-                15895,
-                str::stream()
-                    << "The nonAtomic:false option is no longer allowed in the mapReduce command. "
-                    << "Please omit or specify nonAtomic:true",
-                o["nonAtomic"].Bool());
+            if (serverGlobalParams.featureCompatibility.getVersion() ==
+                ServerGlobalParams::FeatureCompatibility::Version::kFullyUpgradedTo44) {
+                uassert(15895,
+                        str::stream() << "The nonAtomic:false option is no longer allowed in the "
+                                         "mapReduce command. "
+                                      << "Please omit or specify nonAtomic:true",
+                        o["nonAtomic"].Bool());
+            } else {
+                outputOptions.outNonAtomic = o["nonAtomic"].Bool();
+                if (outputOptions.outNonAtomic) {
+                    uassert(4668501,
+                            "nonAtomic option cannot be used with this output type",
+                            (outputOptions.outType == OutputType::Reduce ||
+                             outputOptions.outType == OutputType::Merge));
+                } else if (nonAtomicDeprecationSampler.tick()) {
+                    LOGV2_WARNING(23796,
+                                  "Setting out.nonAtomic to false in MapReduce is deprecated.");
+                }
+            }
         }
     } else {
         uasserted(13606, "'out' has to be a string or an object");
